# Spacy-Integration-Tests-FEniCS

./: .travis.yml  CMakeLists.txt  README.md  project.config  run_test_in_docker.sh
FEniCS/: Copy.cpp  L2Functional.h  L2Functional.ufl  L2Functional_debug.py  LinearHeat.h  Vector.cpp  VectorCreator.cpp  util.cpp  vector.cpp  vectorCreator.cpp
Mock/: C2Functional.cpp  LinearOperator.cpp  LinearSolver.cpp  Norm.cpp  ScalarProduct.cpp  Vector.cpp  VectorCreator.cpp
